configure TS and eslint, fix serverless config

--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -5,13 +5,23 @@
   "main": "index.js",
   "scripts": {
     "sls": "./node_modules/.bin/sls",
-    "start:dev": "npm run sls offline start --reloadHandler"
+    "start:dev": "export SLS_DEBUG=* && nr sls offline start --reloadHandler --noTimeout --stage local",
+    "sstart:dev": "npm run sls offline start --reloadHandler --noTimeout",
+    "check": "tsc --noEmit",
+    "lint": "eslint . --ext .ts --fix"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^6.16.0",
+    "@typescript-eslint/parser": "^6.16.0",
+    "esbuild": "^0.19.10",
+    "eslint": "^8.56.0",
+    "prettier": "^3.1.1",
     "serverless": "^3.38.0",
-    "serverless-offline": "^13.3.2"
+    "serverless-esbuild": "^1.50.1",
+    "serverless-offline": "^13.3.2",
+    "typescript": "^5.3.3"
   }
 }
