--- a/packages/api/serverless.yml
+++ b/packages/api/serverless.yml
@@ -1,23 +1,51 @@
 service: api
 frameworkVersion: "3"
 
+package:
+  individually: true
+
+plugins:
+  - serverless-esbuild
+  - serverless-offline
+
 provider:
   name: aws
   runtime: nodejs18.x
+  region: us-east-1
+  httpApi:
+    cors: true
+  environment:
+    NODE_OPTIONS: "--enable-source-maps"
+
+params:
+  default:
+    esbuildMinify: true
+    esbuildExclude:
+      - aws-sdk
+  local:
+    esbuildMinify: false
+    esbuildExclude: []
+
+custom:
+  stages:
+    - local
+    - dev
+    - prod
+  stage: ${opt:stage, 'dev'}
+  esbuild:
+    bundle: true
+    minify: ${param:esbuildMinify}
+    sourcemap: true
+    keepNames: true
+    watch:
+      pattern:
+        - "src/**/*.ts"
+    exclude: ${param:esbuildExclude}
 
 functions:
-  api:
-    handler: index.handler
+  status:
+    handler: src/index.handler
     events:
       - httpApi:
           path: /
           method: get
-
-plugins:
-  - serverless-offline
-
-custom:
-  esbuild:
-    watch:
-      pattern:
-        - "src/**/*js"
