style(api): configure eslint and prettier

--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -7,8 +7,9 @@
     "sls": "./node_modules/.bin/sls",
     "start:dev": "export SLS_DEBUG=* && nr sls offline start --reloadHandler --noTimeout --stage local",
     "sstart:dev": "npm run sls offline start --reloadHandler --noTimeout",
-    "check": "tsc --noEmit",
-    "lint": "eslint . --ext .ts --fix"
+    "check:ts": "tsc --noEmit",
+    "check:lint": "eslint . --ext .ts --fix",
+    "check:style": "prettier --config .prettierrc 'src/**/*.ts' --write"
   },
   "keywords": [],
   "author": "",
