--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/aws-lambda": "^8.10.130",
     "@typescript-eslint/eslint-plugin": "^6.16.0",
     "@typescript-eslint/parser": "^6.16.0",
     "esbuild": "^0.19.10",
@@ -24,5 +25,8 @@
     "serverless-esbuild": "^1.50.1",
     "serverless-offline": "^13.3.2",
     "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "zod": "^3.22.4"
   }
 }
