refactor: configure import aliases

--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -7,6 +7,10 @@
     "strict": true,
     "noImplicitAny": true,
     "strictNullChecks": true,
-    "skipLibCheck": true
+    "skipLibCheck": false,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"]
+    }
   }
 }
