--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -19,6 +19,7 @@
     "@typescript-eslint/parser": "^6.16.0",
     "esbuild": "^0.19.10",
     "eslint": "^8.56.0",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
     "prettier": "^3.1.1",
     "serverless": "^3.38.0",
     "serverless-esbuild": "^1.50.1",
