refactor: reorganize factories

--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -10,7 +10,8 @@
     "skipLibCheck": false,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@/modules/*": ["./src/domain/modules/*"]
     }
   }
 }
