refactor(users): change modeling of entities

--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -11,7 +11,8 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"],
-      "@/modules/*": ["./src/domain/modules/*"]
+      "@/modules/*": ["./src/domain/modules/*"],
+      "@/core/*": ["./src/domain/shared/*"]
     }
   }
 }
