--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,16 @@ node_modules/
 # build apps stuff
 .esbuild
 
-# env files
-.env
-.env.development
+# IDEs and editors
+/.idea
+.project
+.classpath
+*.launch
+.settings/
 
-# mac stuff
+# Temp
+gitignore
+
+# System Files
 .DS_Store
+Thumbs.db
