--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -7,11 +7,17 @@
     "start": "vinxi start"
   },
   "dependencies": {
+    "@solidjs/router": "^0.10.9",
     "@solidjs/start": "^0.4.9",
     "solid-js": "^1.8.11",
     "vinxi": "^0.1.2"
   },
   "engines": {
     "node": ">=18"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.33",
+    "tailwindcss": "^3.4.1"
   }
 }
