--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -2,8 +2,11 @@
   "name": "web",
   "type": "module",
   "scripts": {
-    "dev": "vinxi dev",
     "build": "vinxi build",
+    "check:ts": "tsc --noEmit",
+    "check:lint": "eslint . --ext .ts --fix",
+    "check:style": "prettier --config .prettierrc 'src/**/*.ts' --write",
+    "dev": "vinxi dev",
     "start": "vinxi start"
   },
   "dependencies": {
@@ -16,7 +19,13 @@
     "node": ">=18"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^6.18.1",
+    "@typescript-eslint/parser": "^6.18.1",
     "autoprefixer": "^10.4.16",
+    "eslint": "^8.56.0",
+    "eslint-plugin-solid": "^0.13.1",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "prettier": "^3.1.1",
     "postcss": "^8.4.33",
     "tailwindcss": "^3.4.1"
   }
